# Trinetra-AI

./: .gitignore
SmartVision-AI-Surveillance-Suite/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-gpu.txt  requirements.txt
SmartVision-AI-Surveillance-Suite/api_gateway/: __init__.py  main.py
SmartVision-AI-Surveillance-Suite/benchmarks/: benchmark_motion.py
SmartVision-AI-Surveillance-Suite/campus_security/: README.md  __init__.py  alerts.py  api.py  config.yaml  detector.py  pipeline.py  service.py
SmartVision-AI-Surveillance-Suite/docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  no_clip.txt
SmartVision-AI-Surveillance-Suite/frontend/: index.html  package-lock.json  package.json
SmartVision-AI-Surveillance-Suite/highway_surveillance/: README.md  __init__.py  alerts.py  api.py  config.yaml  detector.py  pipeline.py  service.py
SmartVision-AI-Surveillance-Suite/home_security/: README.md  __init__.py  alerts.py  api.py  config.yaml  detector.py  pipeline.py  service.py
SmartVision-AI-Surveillance-Suite/industrial_safety/: README.md  __init__.py  alerts.py  api.py  config.yaml  detector.py  pipeline.py  service.py
SmartVision-AI-Surveillance-Suite/railway_surveillance/: README.md  __init__.py  alerts.py  api.py  config.yaml  detector.py  pipeline.py  service.py
SmartVision-AI-Surveillance-Suite/retail_analytics/: README.md  __init__.py  alerts.py  api.py  config.yaml  detector.py  pipeline.py  service.py
SmartVision-AI-Surveillance-Suite/sample_datasets/: README.md
(+84 files in other folders)
