[project]
name = "smartvision-ai-surveillance-suite"
version = "0.1.0"
description = "Modular AI-based CCTV surveillance suite with motion-triggered recording"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 140
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
